--- a/sequential_design_GP_paper.tex
+++ b/sequential_design_GP_paper.tex
@@ -49,28 +49,64 @@
 \tableofcontents
 \newpage
 
-\section{Introduction}
-We consider the problem of calibrating the parameters of expensive forward models within the Bayesian inverse problem framework. Let 
+\section{Abstract}
+We consider the problem of calibrating the parameters of expensive forward models within the Bayesian inverse problem framework. In particular, we 
+explore methods for constructing Gaussian process emulators in a batch sequential fashion, allowing for the application of modern parallel computing 
+resources. We consider the common case of forward models with high-dimensional outputs, and compare different emulation targets which each induce 
+a Gaussian process approximation of the unnormalized log posterior density. We only consider approaches that allow 
+for a full Bayesian treatment of likelihood parameters (such as observation variance) without resorting to treating these parameters as additional emulator
+inputs. We present an emulator-based Markov Chain Monte Carlo algorithm which 
+fully propagates the emulator uncertainty into the resulting approximate posterior samples. This algorithm provides the backbone of a batch sequential 
+design strategy which selects new design points by conservatively exploiting the information contained in the current approximate samples. To this end, we 
+explore the application of algorithms for compacting probability distributions to the experimental design problem, and compare the results to traditional 
+variance-based acquisition functions. 
+
+
+\section{Review and Setup}
+
+\subsection{Bayesian Inverse Problems and Computer Model Calibration}
+
+We begin by briefly introducing the Bayesian approach to inverse problems, emphasizing the setting of expensive forward models. 
+Let 
 \begin{align*}
 \fwd: \R^{\Npar} \to \R^{\Ntime}
 \end{align*}
 denote the forward model which maps unknown calibration parameters $\bpar \in \parSpace \subseteq \R^{\Npar}$ to model predictions 
 $\fwd(\bpar) \in \R^{\Ntime}$. The task is to infer the value of the parameters $\bpar$ by comparing predictions $\fwd(\bpar)$ to noisy 
-observations $\bstate \in \R^{\Ntime}$ of the true system being modeled. A likelihood function 
-$\Exp{\llik(\bpar)} = \Exp{\llik(\bpar | \bstate)}$ quantifies discrepancy between the forward model predictions and observed data, with the 
-explicit dependence on $\bstate$ dropped from the notation as the data is assumed constant throughout the analysis. In the Bayesian framework, 
-a prior distribution $\priorDens(\bpar)$ encodes existing knowledge about the parameters. The Bayesian inverse problem is solved by obtaining the 
+observations $\bstate \in \R^{\Ntime}$ of the true system being modeled. Let $\llik(\bpar, \CovObs) := \llik(\bpar |\CovObs, \bstate)$ denote 
+a log-likelihood function which quantifies discrepancy between the forward model predictions and observed data. The 
+explicit dependence on $\bstate$ dropped from the notation as the data is assumed constant throughout the analysis. We use $\CovObs$ to denote 
+\textit{likelihood parameters}; that is, any unknown parameters other than $\bpar$ used to define the likelihood (concrete examples are given below). 
+In the Bayesian framework, 
+a prior distribution $\priorDens(\bpar, \CovObs)$ encodes existing knowledge about both the calibration and likelihood parameters. 
+The Bayesian inverse problem is solved by obtaining the 
 posterior distribution
 \begin{align*}
-\postDens(\bpar) &\propto \Exp{\llik(\bpar)}\priorDens(\bpar),
+\postDens(\bpar, \CovObs) &:= \frac{\Exp{\llik(\bpar, \CovObs)}\priorDens(\bpar, \CovObs)}{\int \Exp{\llik(\bpar, \CovObs)}\priorDens(\bpar, \CovObs) d\bpar d\CovObs},
 \end{align*}
-which is typically summarized via samples or expectations $\E_{\bpar \sim \postDens}[\phi(\bpar)]$ of interest. 
+which synthesizes the prior knowledge with the observed data. Typically, interest centers on the marginal posterior for $\bpar$, which marginalizes over the nuisance 
+parameters $\CovObs$:
+\begin{align*}
+\postDens(\bpar) &:= \int_{\parSpace} \postDens(\bpar, \CovObs) d\CovObs.
+\end{align*}
+For notation, we let $\logUnPost(\bpar, \CovObs)$ denote the unnormalized log posterior density, such that 
+\begin{align*}
+\logUnPost(\bpar, \CovObs) := \llik(\bpar, \CovObs) + \Log{\priorDens(\bpar, \CovObs)}.
+\end{align*}
+The posterior distribution is typically summarized via samples and sample-based approximations of expectations of interest, i.e. $\E_{\bpar \sim \postDens}[\phi(\bpar)]$.
+However, the standard approach of applying a Markov Chain Monte Carlo (MCMC) algorithm to produce samples from $\postDens$ often requires 
+$\BigO(10^4)$ or more iterations, each of which requires evaluating $\logUnPost(\bpar, \CovObs)$, which 
+in turn entails computing a forward model evaluation $\fwd(\bpar)$.In the  case where the forward model takes the form of an expensive computer simulation, this 
+can render MCMC intractable. To address this issue, a variety of techniques have emerged which replace the expensive computations 
+$\logUnPost(\bpar, \CovObs)$ with a cheaper statistical approximation known as an \textit{emulator} or \textit{surrogate}. This paper focuses on Gaussian process 
+emulators, which are introduced below in the specific context of this problem. 
 
-
-\section{Background}
-\subsection{Bayesian Inverse Problems and Computer Model Calibration}
 \subsection{Gaussian Process Emulation}
+
+
 \subsection{Sequential Design}
+
+
 
 \section{Induced Posterior Density Approximation}
 Focus is on methods that produce GP approximation to the log joint posterior density. 
