Progress in exposition for sequential design paper.

--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -270,6 +270,21 @@ keywords = {Bayesian framework, Computer experiment, Dynamic simulator, Gaussian
 abstract = {Simulation plays a major role in the conception, the optimization and the certification of complex systems. Of particular interest here is the calibration of the parameters of computer models from high-dimensional physical observations. When the run times of these computer codes is high, this work focuses on the numerical challenges associated with the statistical inference. In particular, several adaptations of the Gaussian Process Regression (GPR) to the high-dimensional or functional output case are presented for the emulation of computer codes from limited data. Then, an adaptive procedure is detailed to minimize the calibration parameters uncertainty at the minimal computational cost. The proposed method is eventually applied to two applications that are based on dynamic simulators.}
 }
 
+% Emulate log-posterior. 
+@article{doi:10.1198/106186008X320681,
+author = {Nikolay Bliznyuk and David Ruppert and Christine Shoemaker and Rommel Regis and Stefan Wild and Pradeep Mugunthan},
+title = {Bayesian Calibration and Uncertainty Analysis for Computationally Expensive Models Using Optimization and Radial Basis Function Approximation},
+journal = {Journal of Computational and Graphical Statistics},
+volume = {17},
+number = {2},
+pages = {270-294},
+year  = {2008},
+publisher = {Taylor & Francis},
+doi = {10.1198/106186008X320681},
+URL = {https://doi.org/10.1198/106186008X320681},
+eprint = { https://doi.org/10.1198/106186008X320681}
+}
+
 
 % ---------------------------------------------------------------------------------------------------
 % Scaling GPs. 
