--- a/local-defs.tex
+++ b/local-defs.tex
@@ -100,6 +100,9 @@
 % Loss emulation approach; emulating the L2 error functions. 
 \newcommand{\SSRObs}{\mathbf{\SSR}} % Vector of observed SSR responses. 
 
+% Induced approximation to unnormalized log posterior density and unnormalized posterior density. 
+\newcommand{\logUnPostPred}[1][\designIdx]{\ell^{\postDens}_{#1}}
+
 % --------------------------------------------------------------------------------------------------
 % Dynamical Models. 
 % --------------------------------------------------------------------------------------------------
