--- a/sequential_design_GP_paper.tex
+++ b/sequential_design_GP_paper.tex
@@ -177,6 +177,8 @@ Importantly, note that this is different from directly conditioning \ref{logUnPo
 in particular, the response $\logUnPost(\bpar)$ depends on a particular choice of $\CovObs$, while the underlying GP emulator is independent of 
 $\CovObs$. This distinction will be clarified in section \ref{emulation_targets}. 
 
+\subsection{Approximate MCMC Inference Algorithm}
+In addition to integrating out the GP, talk about joint sampling proposed/current; i.e. take into account predictive GP covariance. 
 
 \subsection{Sequential Design}
 
