--- a/local-defs.tex
+++ b/local-defs.tex
@@ -24,7 +24,7 @@
 \newcommand*{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\bx}{\mathbf{x}}
 \newcommand{\bw}{\mathbf{w}}
-\newcommand{\oneVec}[1]{\boldsymbol{1}_{#1}}
+\newcommand{\oneVec}[1][]{\boldsymbol{1}_{#1}}
 \newcommand{\idMat}{\mathbf{I}}
 
 % Probability. 
