--- a/sequential_design_GP_paper.tex
+++ b/sequential_design_GP_paper.tex
@@ -237,7 +237,7 @@ In particular, the IVAR acquisition is maximized by the input batch that results
 over the entire input space $\parSpace$. Applied to the log posterior emulator $\logUnPostPred \sim \GP(\logUnPostMeanPred, \logUnPostKerPred)$, 
 the IVAR acquisition is defined as 
 \begin{align}
-\acq[\designIdx](\batchMat) &= -\E_{\bpar \sim \rho} \Var\left[\logUnPostPred(\bpar) | \batchMat \right] \label{IVAR_GP}
+\acq[\designIdx](\batchMat; \logUnPostPred) &= -\E_{\bpar \sim \rho} \Var\left[\logUnPostPred(\bpar) | \batchMat \right] \label{IVAR_GP}
 \end{align}
 where $\rho$ is a density on $\parSpace$. A key observation is that the predictive variance of a GP is not a function of the observed 
 response, hence the reason that the variance in \ref{IVAR_GP} is conditioned only on $\batchMat$ and not on 
@@ -251,11 +251,15 @@ variance depends on the response $Z\postDens(\batchMat)$. Since $Z\postDens(\bat
 inputs $\batchMat$) then the IVAR definition \label{IVAR_GP} directly applied to $\unPostPred$ results in a random variable.
 We thus generalize the IVAR definition by integrating out the unknown quantity $\tilde{\boldsymbol{\postDens}} := Z \postDens(\batchMat)$, where the expectation is taken with respect to the current predictive distribution $\unPostPred$,
 \begin{align}
-\acq[\designIdx](\batchMat) &= -\E_{\bpar \sim \rho} \E_{\tilde{\boldsymbol{\postDens}}  \sim \unPostPred} \Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}}  \right]. \label{IVAR_LNP}
+\acq[\designIdx](\batchMat; \unPostPred) &= -\E_{\bpar \sim \rho} \E_{\tilde{\boldsymbol{\postDens}}  \sim \unPostPred} \Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}}  \right]. \label{IVAR_LNP}
 \end{align}
 Similarly to \ref{IVAR_GP}, all expectations except the outermost are available in closed-form. IVAR expressions applied to $\logUnPostPred$ and 
 $\unPostPred$ are given below. The former is a direct application of the predictive variance equation for GPs \ref{kriging_eqns}, while the latter is 
 derived in the appendix. 
+\begin{align}
+\acq[\designIdx](\batchMat; \logUnPostPred) &= -\E_{\bpar \sim \rho}  \left[\logUnPostKerPred[\designIdx, \batchMat](\bpar)\right] \label{IVAR_GP_derivation} \\
+\acq[\designIdx](\batchMat; \unPostPred) &= -\E_{\bpar \sim \rho} \label{IVAR_LNP_derivation}
+\end{align}
 
 \subsection{Information-based}
 \subsection{Optimization-focused}
@@ -283,13 +287,57 @@ I believe this terminology comes from paper ``Asymptotic analysis of stochastic 
 \item Investigate why lpost prediction is yielding so many negative variances. 
 \end{enumerate}
 
+\section{Appendix}
+\subsection{Acquisition Function Derivations}
+\subsubsection{Integrated Variance}
+Here we derive \ref{IVAR_LNP_derivation}, the IVAR acquisition applied to the posterior density emulator. Recall the definition 
+\begin{align}
+\acq[\designIdx](\batchMat; \unPostPred) &= -\E_{\bpar \sim \rho} \E_{\tilde{\boldsymbol{\postDens}}  \sim \unPostPred} \Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}} \right].
+\end{align}
+The outermost expectation is in general not available in closed-form, so we focus on the remaining expectation and variance. Recalling the fact 
+$\unPostPred \sim \LNP(\logUnPostMeanPred, \logUnPostKerPred)$ and the notation 
+$\unPostPred | \batchMat, \tilde{\boldsymbol{\postDens}} \sim \LNP(\logUnPostMeanPred[\designIdx, \batchMat], \logUnPostKerPred[\designIdx, \batchMat])$
+we have that 
+\begin{align}
+\Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}} \right] &= \Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} \left[\Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} - 1\right] \Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \label{IVAR_LNP_derivation_var}
+\end{align}
+Since the predictive variance $\logUnPostKerPred[\designIdx, \batchMat](\bpar)$ does not depend on $\tilde{\boldsymbol{\postDens}}$, the first two terms in the 
+product \ref{IVAR_LNP_derivation_var} can be pulled out of the expectation $\E_{\tilde{\boldsymbol{\postDens}}}$, leaving only the third term. Focusing on this third term, 
+recall that 
+\begin{align*}
+\logUnPostMeanPred[\designIdx, \batchMat](\bpar) &= \logUnPostMean(\bpar) + \logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \left(\tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat} - \logUnPostMean(\bpar) \oneVec \right).
+\end{align*}
+Thus, 
+\begin{align}
+\E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \right] 
+&= \Exp{2\logUnPostMean(\bpar) \left[1 -  \logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1}\oneVec\right] }
+\E\left[\Exp{\logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}}\right]
+\end{align}
+Note that the only dependence on $\tilde{\boldsymbol{\postDens}}$ stems from the lower $\Nbatch \times 1$ block of the $(\designIdx + \Nbatch) \times 1$ vector 
+\begin{align*}
+\tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}
+&= \begin{pmatrix} \postDens(\designMat)^\top & \postDens(\batchMat)^\top  \end{pmatrix}^\top.
+\end{align*}
 
+\subsection{Determinant and Inverse of Block Matrix}
+In the sequential design setting, we are continually adding data to the design $X_n$ and then having to re-compute quantities such as 
+$K(X_{n+1})^{-1}$ and $\det\left(K(X_{n+1}) \right)$. Formulas for the inverse and determinant of block matrices will come in handy 
+when deriving fast updates for these quantities. 
 
+\subsubsection{Determinant}
+Let $A$, $B$, $C$, $D$ be square matrices with $A$ invertible. Then, 
+\[
+\det\begin{pmatrix} A & B \\ C & D \end{pmatrix} = \det \begin{pmatrix} A & B \\ 0 & D - CA^{-1}B \end{pmatrix} = \det(A) \cdot 
+\det\left(D - CA^{-1}B \right)
+\]
 
-
-
-
-
+\subsubsection{Inverse}
+James E. Pustejovsky provides a nice post on the inversion of partitioned matrices $\href{https://www.jepusto.com/inverting-partitioned-matrices/}{here}$. Suppose $A$ and $D$ are invertible, not necessarily of 
+equal dimension. Letting $S = \left(D - CA^{-1}B\right)^{-1}$ we have 
+\[
+\begin{pmatrix} A & B \\ C & D \end{pmatrix}^{-1} = \begin{pmatrix} A^{-1} + A^{-1}BSCA^{-1} & -A^{-1}BS \\
+-SCA^{-1} & S \end{pmatrix}
+\]
 
 
 
