Progress on integrated variance calculation for log normal process.

--- a/local-defs.tex
+++ b/local-defs.tex
@@ -26,6 +26,9 @@
 \newcommand{\bw}{\mathbf{w}}
 \newcommand{\oneVec}[1][]{\boldsymbol{1}_{#1}}
 \newcommand{\idMat}{\mathbf{I}}
+\newcommand{\bS}{\mathbf{S}}
+\newcommand{\bK}{\mathbf{K}}
+\newcommand{\ba}{\mathbf{a}}
 
 % Probability. 
 \newcommand{\E}{\mathbb{E}}
@@ -108,6 +111,9 @@
 \newcommand{\unPostPred}[1][\designIdx]{\postDens_{#1}}
 \newcommand{\logUnPostMean}{\mu}
 \newcommand{\logUnPostKer}{k}
+\newcommand{\logUnPostObs}[1][\designIdx]{\boldsymbol{\ell}^{\postDens}_{#1}}
+\newcommand{\logUnPostBatch}{\tilde{\boldsymbol{\ell}}^{\postDens}}
+\newcommand{\logUnPostObsBatch}[1][\designIdx]{\tilde{\boldsymbol{\ell}}^{\postDens}_{#1}}
 \newcommand{\logUnPostMeanPred}[1][\designIdx]{\mu_{#1}}
 \newcommand{\logUnPostKerPred}[1][\designIdx]{k_{#1}}
 \newcommand{\GPMeanTarget}{m} % Underlying GP mean
