--- a/sequential_design_GP_paper.tex
+++ b/sequential_design_GP_paper.tex
@@ -260,6 +260,7 @@ derived in the appendix.
 \acq[\designIdx](\batchMat; \logUnPostPred) &= -\E_{\bpar \sim \rho}  \left[\logUnPostKerPred[\designIdx, \batchMat](\bpar)\right] \label{IVAR_GP_derivation} \\
 \acq[\designIdx](\batchMat; \unPostPred) &= -\E_{\bpar \sim \rho} \label{IVAR_LNP_derivation}
 \end{align}
+[TODO: provide interpretations and big O for acquisitions.]
 
 \subsection{Information-based}
 \subsection{Optimization-focused}
@@ -299,25 +300,72 @@ $\unPostPred \sim \LNP(\logUnPostMeanPred, \logUnPostKerPred)$ and the notation
 $\unPostPred | \batchMat, \tilde{\boldsymbol{\postDens}} \sim \LNP(\logUnPostMeanPred[\designIdx, \batchMat], \logUnPostKerPred[\designIdx, \batchMat])$
 we have that 
 \begin{align}
-\Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}} \right] &= \Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} \left[\Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} - 1\right] \Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \label{IVAR_LNP_derivation_var}
+\Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}} \right] &= \Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} \left[\Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} - 1\right] \Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \label{IVAR_LNP_derivation_var} \\
+&=: \Exp{a_1}  \left[\Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} - 1\right] \Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \nonumber
 \end{align}
 Since the predictive variance $\logUnPostKerPred[\designIdx, \batchMat](\bpar)$ does not depend on $\tilde{\boldsymbol{\postDens}}$, the first two terms in the 
 product \ref{IVAR_LNP_derivation_var} can be pulled out of the expectation $\E_{\tilde{\boldsymbol{\postDens}}}$, leaving only the third term. Focusing on this third term, 
 recall that 
 \begin{align*}
-\logUnPostMeanPred[\designIdx, \batchMat](\bpar) &= \logUnPostMean(\bpar) + \logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \left(\tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat} - \logUnPostMean(\bpar) \oneVec \right).
+\logUnPostMeanPred[\designIdx, \batchMat](\bpar) &= \logUnPostMean(\bpar) + \logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \left(\logUnPostObsBatch - \logUnPostMean(\bpar) \oneVec \right).
 \end{align*}
 Thus, 
 \begin{align}
 \E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \right] 
 &= \Exp{2\logUnPostMean(\bpar) \left[1 -  \logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1}\oneVec\right] }
-\E\left[\Exp{\logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}}\right]
+\E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2\logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \logUnPostObsBatch}\right]  \label{IVAR_LNP_derivation_exp_mean_term} \\
+&=: \Exp{a_2} \E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2\logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \logUnPostObsBatch}\right] \nonumber
 \end{align}
-Note that the only dependence on $\tilde{\boldsymbol{\postDens}}$ stems from the lower $\Nbatch \times 1$ block of the $(\designIdx + \Nbatch) \times 1$ vector 
+Note that the only dependence on $\logUnPostBatch$ stems from the lower $\Nbatch \times 1$ block of the $(\designIdx + \Nbatch) \times 1$ vector 
 \begin{align*}
-\tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}
-&= \begin{pmatrix} \postDens(\designMat)^\top & \postDens(\batchMat)^\top  \end{pmatrix}^\top.
+\logUnPostObsBatch
+&= \begin{pmatrix} \logUnPost(\designMat)^\top & \logUnPost(\batchMat)^\top  \end{pmatrix}^\top = 
+\begin{pmatrix} \left(\logUnPostObs\right)^\top & \left(\logUnPostBatch\right)^\top  \end{pmatrix}^\top.
 \end{align*}
+To isolate this block, we apply the partitioned matrix inverse equation \ref{block_inverse}
+\begin{align*}
+\KerMat[\designIdx, \batchMat]^{-1} &= \begin{pmatrix} \bS_{1} & \bS_{2} \\  \bS_{3} & \bS_{4} \end{pmatrix} := 
+\begin{pmatrix} 
+	\KerMat^{-1} + \KerMat^{-1}\tilde{\KerMat[]}_{\designIdx}\mathbf{S} \tilde{\KerMat[]}_{\designIdx}^\top \KerMat^{-1} & -\KerMat^{-1}\tilde{\KerMat[]}_{\designIdx} \mathbf{S}  \\
+	-\mathbf{S} \tilde{\KerMat[]}_{\designIdx}^\top \KerMat^{-1} & \mathbf{S}  
+\end{pmatrix},
+\end{align*}
+where the block entries are given in \ref{block_inverse}. Additionally defining 
+$\boldsymbol{\logUnPostKer}_{\designIdx} := \logUnPostKer(\designMat, \bpar)$ and $\tilde{\boldsymbol{\logUnPostKer}} := \logUnPostKer(\batchMat, \bpar)$, we obtain 
+\begin{align*}
+\logUnPostKer(\bpar, \designMat[\designIdx, \batchMat]) \KerMat[\designIdx, \batchMat]^{-1} \tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}
+&= \begin{pmatrix} \boldsymbol{\logUnPostKer}_{\designIdx} \\ \tilde{\boldsymbol{\logUnPostKer}}  \end{pmatrix}^\top 
+\begin{pmatrix} \bS_{1} & \bS_{2} \\  \bS_{3} & \bS_{4} \end{pmatrix} 
+\begin{pmatrix} \logUnPostObs \\ \logUnPostBatch \end{pmatrix} \\
+&= \left(\boldsymbol{\logUnPostKer}_{\designIdx}^\top \bS_1 + \tilde{\boldsymbol{\logUnPostKer}}^\top \bS_3 \right) \logUnPostObs + 
+\left(\boldsymbol{\logUnPostKer}_{\designIdx}^\top \bS_2 + \tilde{\boldsymbol{\logUnPostKer}}^\top \bS_4 \right) \logUnPostBatch
+\end{align*}
+Since only the second term depends on $\tilde{\boldsymbol{\logUnPostKer}}$, plugging back into \ref{IVAR_LNP_derivation_exp_mean_term} yields 
+\begin{align*}
+\E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2 \logUnPostMeanPred[\designIdx, \batchMat](\bpar)} \right] 
+&= \Exp{a_2 + 
+2\left(\boldsymbol{\logUnPostKer}_{\designIdx}^\top \bS_1 + \tilde{\boldsymbol{\logUnPostKer}}^\top \bS_3 \right) \logUnPostObs }
+\E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{2\left(\boldsymbol{\logUnPostKer}_{\designIdx}^\top \bS_2 + \tilde{\boldsymbol{\logUnPostKer}}^\top \bS_4 \right) \logUnPostBatch}\right] \\
+&=: \Exp{a_2 + a_3} \E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{\ba_4^\top \logUnPostBatch} \right]
+\end{align*}
+Now, since 
+$\ba_4^\top \logUnPostBatch | \designMat, \tilde{\boldsymbol{\postDens}} \sim 
+\Gaussian(\ba_4^\top \logUnPostMeanPred(\batchMat), \ba_2^\top \logUnPostKerPred(\batchMat) \ba_4)$ 
+it follows that 
+\begin{align*}
+\E_{\tilde{\boldsymbol{\postDens}}}\left[\Exp{\ba_4^\top \logUnPostBatch} \right]
+&= \Exp{\ba_4^\top \logUnPostMeanPred(\batchMat) + \frac{1}{2} \ba_4^\top \logUnPostKerPred(\batchMat) \ba_4}
+\end{align*}
+Plugging everything back into \ref{IVAR_LNP_derivation_var}, we obtain 
+\begin{align}
+\Var\left[\unPostPred(\bpar) | \batchMat, \tilde{\boldsymbol{\postDens}} \right] &= \Exp{a_1 + a_2 + a_3}  \left[\Exp{\logUnPostKerPred[\designIdx, \batchMat](\bpar)} - 1\right] \Exp{\ba_4^\top \logUnPostMeanPred(\batchMat) + \frac{1}{2} \ba_4^\top \logUnPostKerPred(\batchMat) \ba_4}
+\end{align}
+
+s
+[TODO: $\tilde{\boldsymbol{\postDens}}_{\designIdx, \batchMat}$ is confusing: looks like I am referring to emulator but actually referring to observed data. Maybe 
+should just state clearly that bolded pi implies observed data; maybe should just avoid U subscript altogether and just use tildes when only referring to 
+new data, subscript n when referring to current design, and both when referring to cross covs between the two.]
+
 
 \subsection{Determinant and Inverse of Block Matrix}
 In the sequential design setting, we iteratively add new data $\batchMat \in \R^{\Nbatch \times \Npar}$ to the current design 
